--- a/day03/loop/hello_10.html
+++ b/day03/loop/hello_10.html
@@ -15,9 +15,9 @@
         var n = 1;
 
         while(n <= 10){ //종료식(조건식)
+            n += 1; //n = n + 1;  n++; //증감값 
             document.write("Hello~" + n + "<br>");
-            //n = n + 1;  //증감값
-            n++;
+            
         }
         document.write("프로그램 종료");
     </script>
