--- a/day04/loop/forfor.html
+++ b/day04/loop/forfor.html
@@ -46,6 +46,20 @@
             document.write("<br>")
         }
 
+
+        for(i = 1; i <= 5; i++){
+            for(j = 6-i; j > 0; j--){
+                document.write('$');
+            }
+            document.write("<br>")
+        }
+        /*
+        i=1, j=5,4,3,2,1    *****
+        i=2, j=4,3,2,1      ****
+        i=3, j=3,2,1        ***
+        i=4, j=2,1          **
+        i=5, j=1            *       
+        */
     </script>
 </body>
 </html>
