--- a/day05/function/globle_var.html
+++ b/day05/function/globle_var.html
@@ -13,10 +13,12 @@
         //1 증가시키는 함수
         //전역 변수의 유효 범위 - 전역 공간에서 생성되고 프로그램이 종료 되면 메모리에서 삭제됨
         function oneUp(){
-            x++;
+            var x = 1; //지역변수
+            x += 1;
             return x;
         }
-        var x = 1;  //전역 변수
+        //var x = 1;  //전역 변수
+        //지역변수로 지급시 호출 할때마다 x=1 로 출력, 값은 계속 2로 나옴. 전역 변수로 지급시 호출마다 누적되어 출력
         var num = oneUp();
         document.write("num = " + num + "<br>");//2
 
